--- a/index.html
+++ b/index.html
@@ -952,8 +952,8 @@
                                     Made with 
                                     <i class="fa fa-heart"></i>
                                     by 
-                                    <a target="_blank" href="http://bootstrapthemes.co">Bootstrap Themes</a> 
-                                    2016. All Rights Reserved
+                                    <a target="_blank" href="http://bootstrapthemes.co">UKaren</a> 
+                                    2019. All Rights Reserved
                                 </p>
                             </div>
                             <div class="col-md-6 text-right sm-text-center sm-m-top-20">
