--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                             <li><a href="index.html">home</a></li> 
-							<li><a href="aboutus.html">about</a></li> 							                   
-                            <li><a href="model.html">our models</a></li> 							
-                            <li><a href="blog.html">blog</a></li>                                    
+			   <li><a href="aboutus.html">about</a></li> 							                   
+                            <li><a href="model.html">Portfolio</a></li> 							
+                            <li><a href="blog.html">blog</a></li>
+			<li><a href="blog.html">Shop</a></li>
                             <li><a href="contactus.html">contact</a></li>                    
                         </ul>
                     </div><!-- /.navbar-collapse -->
