--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
             <div id="loading-center">
                 <div id="loading-center-absolute">
                     <div class="object"></div>
+		<div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
                    
                 </div>
             </div>
