--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 </div>
             </div>
         </div>
-
+                <div class="culmn">
         <!--End off Preloader -->
-
+       
 
 
             <!--Home page style-->
