--- a/blog.html
+++ b/blog.html
@@ -388,10 +388,10 @@
                             </div>
                             <div class="col-md-6 text-right sm-text-center sm-m-top-20">
                                 <ul class="list-inline">
-                                    <li><a href="">Facebook</a></li>
+                                    <li><a href="https://www.facebook.com/UKarenApp/">Facebook</a></li>
                                     <li><a href="">Twitter</a></li>
                                     <li><a href="">Instagram</a></li>
-                                    <li><a href="">Pinterest</a></li>
+                                    <li><a href="https://www.youtube.com/user/mooehkalu">youtube</a></li>
                                 </ul>
                             </div>
                         </div>
