--- a/index.html
+++ b/index.html
@@ -905,9 +905,8 @@
                                                 <a href="" class="btn btn-default">SEND MESSAGE <i class="fa fa-long-arrow-right"></i></a>
                                             </div>
                                         </div>
-                                       <div>
-		<h4> style='margin:0;padding:0;'>KNU font KNU font (ASCII)</h4>
-	      <input type="button" value="-> Unicode" onclick="convertRequest('knu', 'KNU')" />
+                                     <div>
+      <h4 style='margin:0;padding:0;'>KNU font (ASCII)</h4>       <input type="button" value="-> Unicode" onclick="convertRequest('knu', 'KNU')" />
       <input type="checkbox" id="strip_blanks" value="StripSpaces" checked> Strip spaces<br>
 
       <textarea id='knu'  class='knu'
