--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 
     <head>
         <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+      <base href=""><!--[if lte IE 6]></base><![endif]-->   
         <title>UKaren</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
