--- a/contactus.html
+++ b/contactus.html
@@ -300,6 +300,17 @@
                                             <div class="form-group">
                                                 <a href="" class="btn btn-default">SEND MESSAGE <i class="fa fa-long-arrow-right"></i></a>
                                             </div>
+						 <div>
+      <h4 style='margin:0;padding:0;'>KNU font (ASCII)
+	</h4> <input type="button" value="-> Unicode" onclick="convertRequest('knu', 'KNU')" />
+      <input type="checkbox" id="strip_blanks" value="StripSpaces" checked> Strip spaces<br>
+<textarea id='knu'  class='knu'
+        rows="1" cols="30">w&gt; *h&gt; vdm bSD vdm td. xD. vX bD u x. xH w rX. w&gt; wdm usJR</textarea>
+        <br />
+      <hr>
+    </div>
+
+    <div>
                                         </div>
 
                                     </div>
