--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+	 <script type="text/javascript" src="/js/shake-n-break.js"></script>
+
+  <script type="text/javascript" src="/js/myzu.js"></script>
+  
 	<script type="text/javascript" >
   // Code to request transliteration (conversion) and handle the return. 
   function convertRequest(source, type) {
