--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
                                             </div>
                                         </div>
                                      <div>
-      <h4 style='margin:3;padding:3;'>KNU font (ASCII)</h4>       <input type="button" value="-> Unicode" onclick="convertRequest('knu', 'KNU')" />
+      <h4 style='margin:3;padding:3;'>Write KNU FONT Here</h4>       <input type="button" value="-> Unicode" onclick="convertRequest('knu', 'KNU')" />
       <input type="checkbox" id="strip_blanks" value="StripSpaces" checked> Strip spaces<br>
 
       <textarea id='knu'  class='knu'
