--- a/blog-details.html
+++ b/blog-details.html
@@ -518,7 +518,7 @@
                                     <li><a href="">Facebook</a></li>
                                     <li><a href="">Twitter</a></li>
                                     <li><a href="">Instagram</a></li>
-                                    <li><a href="">unDzd</a></li>
+                                    <li><a href="">ကညီဖိ</a></li>
                                 </ul>
                             </div>
                         </div>
