--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
                                     <li><a href="">Facebook</a></li>
                                     <li><a href="">Twitter</a></li>
                                     <li><a href="">Instagram</a></li>
-                                    <li><a href="">unDzd</a></li>
+                                    <li><a href="">ကညီဖိ</a></li>
                                 </ul>
                             </div>
                         </div>
