--- a/model-details.html
+++ b/model-details.html
@@ -581,7 +581,7 @@
                                     <li><a href="">Facebook</a></li>
                                     <li><a href="">Twitter</a></li>
                                     <li><a href="">Instagram</a></li>
-                                    <li><a href="">Pinterest</a></li>
+                                    <li><a href="">ကညီဖိ</a></li>
                                 </ul>
                             </div>
                         </div>
