--- a/index.html
+++ b/index.html
@@ -104,7 +104,26 @@
     </head>
 
     <body data-spy="scroll" data-target=".navbar-collapse">
-
+<style>
+	/* Hover over Nav Menu */
+li{
+	display: inline-block;
+	position: relative;
+}
+li:after {
+	content: '';
+	display: block;
+	margin: auto;
+	height: 8px;
+	width: 0px;
+	background: transparent;
+	transition: width .5s ease, background-color .5s ease;
+}
+li:hover:after {
+	width: 100%;
+	background: #3366FF;
+}
+</style>
 
         <!-- Preloader -->
 
