--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@ li:after {
 	content: '';
 	display: block;
 	margin: auto;
-	height: 8px;
+	height: 4px;
 	width: 0px;
 	background: transparent;
 	transition: width .5s ease, background-color .5s ease;
 }
 li:hover:after {
 	width: 100%;
-	background: #3366FF;
+	background: #FB692A;
 }
 </style>
 
