--- a/index.html
+++ b/index.html
@@ -107,84 +107,27 @@
 <style>
 	
 /* Hover over Nav Menu */
-
-$menu-background: #343e48;
-$blue: #4795c3;
-$grey: #686f77;
-$yellow: #ecc64b;
-$green: #0b9ea6;
-$red: #f26667;
-
-
-ul {
-  display: block;
-  text-align: center;
-  margin: 0 auto;
-  padding: 0;
-  width: 100%;
-  min-width:535px;
-  background-color: $menu-background;
-  position:relative;
-
-  &:after {
-    content:"";
-    position:absolute;
-    top:0;
-    left:0;
-     width:100%;
-    height:100%;
-    opacity:.5;
-    
-  }
- 
-  box-shadow:0 3px 8px rgba(black,.5);
-}
-
-li {
-  margin: 0 auto;
+.hover-underline-animation {
   display: inline-block;
-  list-style: none;
-  padding:0;
-}
-
-a {
-  display: block;
-  padding: 25px;
-  text-transform: uppercase;
   position: relative;
-  z-index: 2;
-  text-shadow:1px 0px rgba(black,.4);
-  color: $grey;
-  letter-spacing:.2em;
-  text-decoration: none;
-  transition: color 200ms;
-  transform-style: preserve-3d;
-  &:hover {
-    color: $menu-background;
-  }
-  &:after {
-    content: attr(data-title);
-    position: absolute;
-    display: block;
-    text-shadow:none;
-    top: 29%;
-    left: 18px;
-    padding: 5px 7px;
-    color: transparent;
-    background: $blue;
-    li:nth-child(2) & { background:$yellow; }
-     li:nth-child(3) & { background:$green; }
-     li:nth-child(4) & { background:$red; }
-    transform-origin: 50% 0%;
-      backface-visibility: hidden;
-    transform: translate3d(0px, 105%, 0px) rotateX(-112deg);
-    transform-style: preserve-3d;
-    transition: all 200ms ease;
-    z-index: -1;
-  }
-  &:hover:after {
-    transform: rotateX(0deg) translateZ(0px);
-  }
+  color: #0087ca;
+  cursor: pointer;
+}
+.hover-underline-animation::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #0087ca;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+.hover-underline-animation:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 
 </style>
