--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
 <style>
 	
 /* Hover over Nav Menu */
-.hover-underline-animation {
+li {
   display: inline-block;
   position: relative;
   color: #0087ca;
   cursor: pointer;
 }
-.hover-underline-animation::after {
+li::after {
   content: '';
   position: absolute;
   width: 100%;
@@ -125,7 +125,7 @@
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
-.hover-underline-animation:hover::after {
+li:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
