--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@ li::after {
   position: absolute;
   width: 100%;
   transform: scaleX(0);
-  height: 2px;
+  height: 4px;
   bottom: 0;
   left: 0;
-  background-color: #0087ca;
+  background-color: #FB892A;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
