--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 li {
   display: inline-block;
   position: relative;
-  color: #0087ca;
+  color: #FB892A;
   cursor: pointer;
 }
 li::after {
@@ -121,6 +121,7 @@ li::after {
   height: 4px;
   bottom: 0;
   left: 0;
+color: #FB892A;
   background-color: #FB892A;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
