--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ li:hover::after {
                             <i class="fa fa-bars"></i>
                         </button>
                         <a class="navbar-brand" href="index.html">
-				<h3>Ukaren</h3>
+				<h3 style="color: #FB892A;"><b>Ukaren</b></h3>
                             <img src="assets/images/logo.png" class="logo logo-display" alt="">
                             <img src="assets/images/logo-black.png" class="logo logo-scrolled" alt="">
 
