--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ li:hover::after {
                 <!-- End Top Search -->
 
                 <div class="container">    
-                    <!-- Start Atribute Navigation -->
+                    <!-- Start Atribute Navigation 
                     <div class="attr-nav">
                         <ul>
                             <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
@@ -209,7 +209,7 @@ li:hover::after {
 
                         </ul>
                     </div>        
-                    <!-- End Atribute Navigation -->
+                 End Atribute Navigation -->
 
                     <!-- Start Header Navigation -->
                     <div class="navbar-header">
@@ -310,131 +310,10 @@ li:hover::after {
                 <br />
                 <br />
 
-                <div class="container">
-                    <div class="row">
-                        <div class="main_counter text-center">
-                            <div class="col-md-3">
-                                <div class="counter_item">
-                                    <h2 class="statistic-counter"><em> 29 </em></h2>
-                                    <div class="separator_small"></div>
-                                    <h5>Projects Finished</h5>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="counter_item sm-m-top-40">
-                                    <h2 class="statistic-counter"><em>124</em></h2>
-                                    <div class="separator_small"></div>
-                                    <h5>Happy Clients</h5>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="counter_item sm-m-top-40">
-                                    <h2 class="statistic-counter"><em>76</em></h2>
-                                    <div class="separator_small"></div>
-                                    <h5>Hours of work</h5>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="counter_item sm-m-top-40">
-                                    <h2 class="statistic-counter"><em>500</em> </h2>
-                                    <div class="separator_small"></div>
-                                    <h5>Cup of coffee</h5>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!--End off row-->
-                </div><!--End off container -->
+         
 
-                <br />
-                <br />
-                <br />
-                <hr />
-                <br />
-                <br />
-                <br />
+                           
 
-                <!--Our Work Section-->
-                <div class="container">
-                    <div class="row">
-                        <div class="main_work">
-
-                            <div class="col-md-7 col-md-offset-5 col-sm-12 col-xs-12">
-                                <div class="work_item">
-                                    <div class="row">
-                                        <div class="col-md-7 col-sm-12 col-xs-12 text-right pull-right sm-text-center">
-                                            <div class="work_item_img">
-                                                <img src="assets/images/work-img1.jpg" alt="" />
-                                            </div>
-                                        </div>
-                                        <div class="col-md-5 col-sm-12 col-xs-12 text-right pull-left sm-text-center">
-                                            <div class="work_item_details m-top-80 sm-m-top-20">
-                                                <h4>Fashionista</h4>
-                                                <div class="work_separator1"></div>
-                                                <p class="m-top-40 sm-m-top-10">Duis autem vel eum iriure dolor in hendrerit in vulputate velit molestie consequat</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div><!-- End off work-item -->
-
-                            <div class="col-md-7 col-sm-12 col-xs-12">
-                                <div class="work_item">
-                                    <div class="row">
-                                        <div class="col-md-7 col-sm-12 col-xs-12">
-                                            <div class="work_item_img sm-text-center sm-m-top-40">
-                                                <img src="assets/images/work-img2.jpg" alt="" />
-                                            </div>
-                                        </div>
-                                        <div class="col-md-5 col-sm-12 col-xs-12 text-left pull-left sm-text-center">
-                                            <div class="work_item_details m-top-80 sm-m-top-20">
-                                                <h4>Fashionista</h4>
-                                                <div class="work_separator2"></div>
-                                                <p class="m-top-40 sm-m-top-10">Duis autem vel eum iriure dolor in hendrerit in vulputate velit molestie consequat</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div><!-- End off work-item -->
-
-                            <div class="col-md-7 col-md-offset-5 col-sm-12 col-xs-12">
-                                <div class="work_item">
-                                    <div class="row">
-                                        <div class="col-md-7 col-sm-12 col-xs-12 text-right pull-right sm-text-center">
-                                            <div class="work_item_img sm-m-top-40">
-                                                <img src="assets/images/work-img3.jpg" alt="" />
-                                            </div>
-                                        </div>
-                                        <div class="col-md-5 col-sm-12 col-xs-12 text-right pull-left sm-text-center">
-                                            <div class="work_item_details m-top-80 sm-m-top-20">
-                                                <h4>Fashionista</h4>
-                                                <div class="work_separator1"></div>
-                                                <p class="m-top-40 sm-m-top-10">Duis autem vel eum iriure dolor in hendrerit in vulputate velit molestie consequat</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div><!-- End off work-item -->
-
-                            <div class="col-md-7 col-sm-12 col-xs-12">
-                                <div class="work_item">
-                                    <div class="row">
-                                        <div class="col-md-7 col-sm-12 col-xs-12">
-                                            <div class="work_item_img sm-text-center sm-m-top-40">
-                                                <img src="assets/images/work-img4.jpg" alt="" />
-                                            </div>
-                                        </div>
-                                        <div class="col-md-5 col-sm-12 col-xs-12 text-left pull-left sm-text-center">
-                                            <div class="work_item_details m-top-80 sm-m-top-20">
-                                                <h4>Fashionista</h4>
-                                                <div class="work_separator2"></div>
-                                                <p class="m-top-40 sm-m-top-10">Duis autem vel eum iriure dolor in hendrerit in vulputate velit molestie consequat</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div><!-- End off work-item -->
 
                         </div>
                     </div>
