--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ li:hover::after {
                 <!-- End Top Search -->
 
                 <div class="container">    
-                    <!-- Start Atribute Navigation 
+                    <!-- Start Atribute Navigation -->
                     <div class="attr-nav">
                         <ul>
                             <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
@@ -209,7 +209,7 @@ li:hover::after {
 
                         </ul>
                     </div>        
-                 End Atribute Navigation -->
+                 <!-- End Atribute Navigation -->
 
                     <!-- Start Header Navigation -->
                     <div class="navbar-header">
