--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <base href=""><!--[if lte IE 6]></base><![endif]-->   
-        <title>UKaren</title>
+        <title>Karen IT Group</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="favicon.ico">
@@ -131,6 +131,79 @@ li:hover::after {
   transform-origin: bottom left;
 }
 
+	
+/* begin new nav style	
+ul {
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  min-width:535px;
+  background-color: #343e48;
+  position:relative;
+
+  &:after {
+    content:"";
+    position:absolute;
+    top:0;
+    left:0;
+     width:100%;
+    height:100%;
+    opacity:.5;
+    
+  }
+ 
+  box-shadow:0 3px 8px rgba(black,.5);
+}
+
+li {
+  margin: 0 auto;
+  display: inline-block;
+  list-style: none;
+  padding:0;
+}
+
+a {
+  display: block;
+  padding: 25px;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 2;
+  text-shadow:1px 0px rgba(black,.4);
+  color: #686f77;
+  letter-spacing:.2em;
+  text-decoration: none;
+  transition: color 200ms;
+  transform-style: preserve-3d;
+  &:hover {
+    color: #343e48;
+  }
+  &:after {
+    content: attr(data-title);
+    position: absolute;
+    display: block;
+    text-shadow:none;
+    top: 29%;
+    left: 18px;
+    padding: 5px 7px;
+    color: transparent;
+    background: #4795c3;
+    li:nth-child(2) & { background:#ecc64b; }
+     li:nth-child(3) & { background:#0b9ea6; }
+     li:nth-child(4) & { background:#f26667; }
+    transform-origin: 50% 0%;
+      backface-visibility: hidden;
+    transform: translate3d(0px, 105%, 0px) rotateX(-112deg);
+    transform-style: preserve-3d;
+    transition: all 200ms ease;
+    z-index: -1;
+  }
+  &:hover:after {
+    transform: rotateX(0deg) translateZ(0px);
+  }
+}
+end nav style */
 </style>
 
         <!-- Preloader -->
@@ -182,7 +255,7 @@ li:hover::after {
                             <i class="fa fa-bars"></i>
                         </button>
                         <a class="navbar-brand" href="index.html">
-				<h3 style="color: #FB892A;"><b>Ukaren</b></h3>
+				<h3 style="color: #FB892A;"><b>Karen IT Group</b></h3>
                             <img src="assets/images/logo.png" class="logo logo-display" alt="">
                             <img src="assets/images/logo-black.png" class="logo logo-scrolled" alt="">
 
@@ -891,10 +964,8 @@ li:hover::after {
                         <div class="main_footer p-top-40 p-bottom-30">
                             <div class="col-md-6 text-left sm-text-center">
                                 <p class="wow fadeInRight" data-wow-duration="1s">
-                                    Made with 
-                                    <i class="fa fa-heart"></i>
-                                    by 
-                                    <a target="_blank" href="http://bootstrapthemes.co">UKaren</a> 
+                                   
+                                    <a target="_blank" href="#">Karen IT Group</a> 
                                     2019. All Rights Reserved
                                 </p>
                             </div>
