--- a/index.html
+++ b/index.html
@@ -964,9 +964,9 @@ end nav style */
                         <div class="main_footer p-top-40 p-bottom-30">
                             <div class="col-md-6 text-left sm-text-center">
                                 <p class="wow fadeInRight" data-wow-duration="1s">
-                                   
+                                     &copy; 2019
                                     <a target="_blank" href="#">Karen IT Group</a> 
-                                    2019. All Rights Reserved
+                                   - All Rights Reserved 
                                 </p>
                             </div>
                             <div class="col-md-6 text-right sm-text-center sm-m-top-20">
