--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@ end nav style */
                     <div class="row">
                         <div class="main_home text-center">
                             <div class="home_text">
-                                <h4 class="text-white text-uppercase">a new creative studio</h4>
-                                <h1 class="text-white text-uppercase">good design is always in season</h1>
+                                <h4 class="text-white text-uppercase">Creative Design Develop</h4>
+                                <h1 class="text-white text-uppercase">Beyond the expectation we - will make it possible</h1>
 
                                 <div class="separator"></div>
 
