--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ end nav style */
                         <div class="main_home text-center">
                             <div class="home_text">
                                 <h4 class="text-white text-uppercase">Creative Design Develop</h4>
-                                <h1 class="text-white text-uppercase">Beyond the expectation we - will make it possible</h1>
+                                <h1 class="text-white text-uppercase">Beyond the expectation - we will make it possible</h1>
 
                                 <div class="separator"></div>
 
