--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <base href=""><!--[if lte IE 6]></base><![endif]-->   
-        <title>Karen IT Group</title>
+        <title>Karen IT </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="favicon.ico">
@@ -255,7 +255,7 @@ end nav style */
                             <i class="fa fa-bars"></i>
                         </button>
                         <a class="navbar-brand" href="index.html">
-				<h3 style="color: #FB892A;"><b>Karen IT Group</b></h3>
+				<h3 style="color: #FB892A;"><b>Karen IT </b></h3>
                             <img src="assets/images/logo.png" class="logo logo-display" alt="">
                             <img src="assets/images/logo-black.png" class="logo logo-scrolled" alt="">
 
@@ -965,7 +965,7 @@ end nav style */
                             <div class="col-md-6 text-left sm-text-center">
                                 <p class="wow fadeInRight" data-wow-duration="1s">
                                      &copy; 2019
-                                    <a target="_blank" href="#">Karen IT Group</a> 
+                                    <a target="_blank" href="#">Karen IT </a> 
                                    - All Rights Reserved 
                                 </p>
                             </div>
