--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 <style>
 	
 /* Hover over Nav Menu */
+	/*
 li {
   display: inline-block;
   position: relative;
@@ -132,7 +133,7 @@ li:hover::after {
 }
 
 	
-/* begin new nav style	
+*/ begin new nav style	
 ul {
   display: block;
   text-align: center;
