--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <style>
 	
 /* Hover over Nav Menu */
-	/*
+	
 li {
   display: inline-block;
   position: relative;
@@ -133,7 +133,7 @@ li:hover::after {
 }
 
 	
-*/ begin new nav style	
+/* begin new nav style	
 li {
   display: block;
   text-align: center;
