--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@ end nav style */
                         </button>
                         <a class="navbar-brand" href="index.html">
 				<h3 style="color: #FB892A;"><b>Karen IT </b></h3>
-                            <img src="assets/images/logo.png" class="logo logo-display" alt="">
-                            <img src="assets/images/logo-black.png" class="logo logo-scrolled" alt="">
+                            <!-- <img src="assets/images/logo.png" class="logo logo-display" alt="">
+                            <img src="assets/images/logo-black.png" class="logo logo-scrolled" alt="">   -->
 
                         </a>
                     </div>
