--- a/index.html
+++ b/index.html
@@ -222,25 +222,9 @@ end nav style */
 </style>
 
         <!-- Preloader -->
-
-        <div id="loading">
-            <div id="loading-center">
-                <div id="loading-center-absolute">
-                    <div class="object"></div>
-		<div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                   
-                </div>
-            </div>
-        </div>
-                <div class="culmn">
+<div class="preloader">
+<div class="status"></div>
+</div>
         <!--End off Preloader -->
        
 
