--- a/index.html
+++ b/index.html
@@ -206,8 +206,24 @@ end nav style */
 </style>
 
         <!-- Preloader -->
-<div class="preloader">
-<div class="status"></div>
+   <div id="loading">
+            <div id="loading-center">
+                <div id="loading-center-absolute">
+                    <div class="object"></div>
+		<div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                   
+                </div>
+            </div>
+        </div>
+                <div class="culmn">
 </div>
         <!--End off Preloader -->
        
