--- a/index.html
+++ b/index.html
@@ -209,16 +209,7 @@ end nav style */
    <div id="loading">
             <div id="loading-center">
                 <div id="loading-center-absolute">
-                    <div class="object"></div>
-		<div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
-                    <div class="object"></div>
+                 <img class="linkThumbnail" src="graphics/links/thumbnail_oilcan.jpg" width="267" height="200"/>
                    
                 </div>
             </div>
