--- a/index.html
+++ b/index.html
@@ -206,15 +206,11 @@ end nav style */
 </style>
 
         <!-- Preloader -->
-   <div id="loading">
+      <div id="loading">
             <div id="loading-center">
                 <div id="loading-center-absolute">
-                 <img class="linkThumbnail" src="graphics/links/thumbnail_oilcan.jpg" width="267" height="200"/>
-                   
-                </div>
-            </div>
-        </div>
-                <div class="culmn">
+                <div class="linkBlock even">
+    <img class="linkThumbnail" src="graphics/links/thumbnail_oilcan.jpg" width="267" height="200"/> 
 </div>
         <!--End off Preloader -->
        
