--- a/index.html
+++ b/index.html
@@ -206,12 +206,24 @@ end nav style */
 </style>
 
         <!-- Preloader -->
-      <div id="loading">
+    <div id="loading">
             <div id="loading-center">
                 <div id="loading-center-absolute">
-                <div class="linkBlock even">
-    <img class="linkThumbnail" src="graphics/links/thumbnail_oilcan.jpg" width="26710" height="10"/> 
-</div>
+                    <div class="object"></div>
+		<div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                    <div class="object"></div>
+                   
+                </div>
+            </div>
+        </div>
+                <div class="culmn">
         <!--End off Preloader -->
        
 
