--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ end nav style */
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-                            <li><a href="index.html">home</a></li> 
+                            <li><a href="MyWeb/index.htmll">home</a></li> 
 				<li><a href="model.html">Portfolio</a></li> 
 			   <li><a href="aboutus.html">about</a></li> 							                   
 				<li><a href="blog.html">blog</a></li>                     
