--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <base href=""><!--[if lte IE 6]></base><![endif]-->   
-        <title>Karen IT </title>
+        <title>UKaren-Leading computer technology for the Karen</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="favicon.ico">
@@ -253,7 +253,7 @@ end nav style */
                             <i class="fa fa-bars"></i>
                         </button>
                         <a class="navbar-brand" href="index.html">
-				<h3 style="color: #FB892A;"><b>UKaren</b></h3>-<h3 font-family: "knu", serif;>unD</h3>
+				<h3 style="color: #FB892A;"><b>UKaren</b></h3>-<h3 style="font-family: 'knu', serif;">unD</h3>
                             <!-- <img src="assets/images/logo.png" class="logo logo-display" alt="">
                             <img src="assets/images/logo-black.png" class="logo logo-scrolled" alt="">   -->
 
@@ -675,8 +675,7 @@ end nav style */
                             <div class="col-md-6 text-left sm-text-center">
                                 <p class="wow fadeInRight" data-wow-duration="1s">
                                      &copy; 2019
-                                    <a target="_blank" href="#">Karen IT </a> 
-                                   - All Rights Reserved 
+                                    <a target="_blank" href="#">UKaren</a> All Rights Reserved 
                                 </p>
                             </div>
                             <div class="col-md-6 text-right sm-text-center sm-m-top-20">
