--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@ end nav style */
                             <i class="fa fa-bars"></i>
                         </button>
                         <a class="navbar-brand" href="index.html">
-				<h3 style="color: #FB892A;"><b>UKaren</b></h3>-<h3 style="font-family: 'knu', serif;">unD</h3>
+				<h3 style="color: #FB892A;"><b>UKaren</b></h3> 
+				<!-- <h3 style="font-family: 'knu', serif;">unD</h3> -->
                             <!-- <img src="assets/images/logo.png" class="logo logo-display" alt="">
                             <img src="assets/images/logo-black.png" class="logo logo-scrolled" alt="">   -->
 
