--- a/index.html
+++ b/index.html
@@ -653,15 +653,19 @@ end nav style */
             <section id="company" class="company bg-light">
                 <div class="container">
                     <div class="row">
+			    <h2 style="text-align: left;">Be apart of us!<h2>
+				    <button style="text-align: right;">Learn More</button>
+			    <!--
                         <div class="main_company roomy-100 text-center">
                             <h3 class="text-uppercase">pouseidon.</h3>
                             <p>7th floor - Palace Building - 221b Walk of Fame - London- United Kingdom</p>
                             <p>(+84). 123. 456. 789  -  info@poiseidon.lnk</p>
                         </div>
+				-->
+			    
                     </div>
                 </div>
             </section>
-
 
             <!-- scroll up-->
             <div class="scrollup">
