--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ end nav style */
                 <div class="container">
                     <div class="row">
 			    <h2 style="text-align: left;">Be apart of us!<h2>
-				    <button style="text-align: right;">Learn More</button>
+				    <h2><a style="text-align: right;">Learn More..</a></h2>
 			    <!--
                         <div class="main_company roomy-100 text-center">
                             <h3 class="text-uppercase">pouseidon.</h3>
