--- a/index.html
+++ b/index.html
@@ -652,9 +652,10 @@ end nav style */
 
             <section id="company" class="company bg-light">
                 <div class="container">
+			  <h2 style="text-align: left;">Be apart of us!<h2>
+				    <h2><a href="#" style="text-align: right;">Learn More..</a></h2>
                     <div class="row">
-			    <h2 style="text-align: left;">Be apart of us!<h2>
-				    <h2><a style="text-align: right;">Learn More..</a></h2>
+			  
 			    <!--
                         <div class="main_company roomy-100 text-center">
                             <h3 class="text-uppercase">pouseidon.</h3>
