--- a/index.html
+++ b/index.html
@@ -285,13 +285,13 @@ end nav style */
                     <div class="row">
                         <div class="main_home text-center">
                             <div class="home_text">
-                                <h6 class="text-white text-uppercase">Creative Design Develop</h6>
-                                <h2 class="text-white text-uppercase">Beyond the expectation - we will make it possible</h6>
+                                <h5 class="text-white text-uppercase">Creative.Design.Develop</h5>
+                                <h1 class="text-white text-uppercase">Beyond the expectation - we will make it possible</h1>
 
                                 <div class="separator"></div>
 
                                 <h6 class=" text-uppercase text-white"><em>One day, the dream will come true with lorem ipsum dolor sit amet, 
-                                        consectetuer adipiscing elit, nummy nibh euismod tincidunt laoreet.</em></h5>
+                                        consectetuer adipiscing elit, nummy nibh euismod tincidunt laoreet.</em></h6>
                             </div>
                         </div>
                     </div><!--End off row-->
