--- a/index.html
+++ b/index.html
@@ -297,7 +297,39 @@ end nav style */
                     </div><!--End off row-->
                 </div><!--End off container -->
             </section> <!--End off Home Sections-->
-
+			<div id='display-wrap'>
+	<div id='display'>
+		<div id='display-text'>
+			<h1>Business V 1.1 Blogger Template </h1>
+			<p>This theme is the perfect blog for your company site on a professional blog. New Sidebar H2, New Style, Theme by My Blogger World </p>
+						<p class='rmlink'>
+<a class='read-more-btn' href='http://mbw-buinesstheme.blogspot.com/p/blog-page.html'><span>Features</span></a>
+<a class='read-more-btn' href='http://www.mybloggerworld.net/2014/10/mbw-business-v-11-blogger-template.html'><span>Download</span></a></p>
+</div>
+<div id='display-img'>
+<div id='display-screen'>
+<div id='slider'>
+<div id='slider-1' style='position: absolute; top: 0px; left: 0px; display: none; z-index: 5; opacity: 0; width: 470px; height: 300px;'>
+  <a href='http://www.mybloggerworld.net' rel='prettyPhoto' title='My Blogger World | MBW'><img alt='Image' height='300' src='https://4.bp.blogspot.com/-Vpr61jgj1NM/VEPmwF_cTpI/AAAAAAAADds/iennNF0lHCk/s1600/Slider%2B(2).png' width='470'/><span class='display-gloss'/></a>	
+</div>
+<div id='slider-2' style='position: absolute; top: 0px; left: 0px; display: block; z-index: 6; opacity: 1; width: 470px; height: 300px;'>
+<a href='#' rel='prettyPhoto' title='Preview Image'><img alt='Image' height='300' src='http://2.bp.blogspot.com/-zvzEzdPfwEs/VEPmwJ5JqRI/AAAAAAAADdo/U1j2h9gk0HY/s1600/Slider%2B(3).png' width='470'/><span class='display-gloss'/></a>	
+</div>
+<div id='slider-3' style='position: absolute; top: 0px; left: 0px; display: none; z-index: 5; opacity: 0; width: 470px; height: 300px;'>
+<a href='#' rel='prettyPhoto' title='Preview Image'><img alt='Image' height='300' src='http://1.bp.blogspot.com/-6lYK3cA0Ans/VEPmvwd_bPI/AAAAAAAADdk/eIWHgxs6DO4/s1600/Slider%2B(1).png' width='470'/><span class='display-gloss'/></a>	
+</div>
+<div id='slider-4' style='position: absolute; top: 0px; left: 0px; display: none; z-index: 5; opacity: 0; width: 470px; height: 300px;'>
+<a href='#' title='Preview Image'><img alt='Image' height='300' src='http://2.bp.blogspot.com/-PkkssdMBeAo/VEPmwpR0UnI/AAAAAAAADdw/Tfx4kZlhH3o/s1600/Slider%2B(4).png' width='470'/><span class='display-gloss'/></a>	
+</div>
+<div id='slider-5' style='position: absolute; top: 0px; left: 0px; display: none; z-index: 5; opacity: 0; width: 470px; height: 300px;'>
+<div class='slider-video'>
+<iframe frameborder='0' height='300' src='http://player.vimeo.com/video/108948474?title=0&amp;byline=0&amp;portrait=0&amp;color=999999' width='470'/></div></div></div>
+</div><!-- end display-screen -->
+<img alt='bg-display-img' height='410' src='http://4.bp.blogspot.com/-Jjn3HtSF4Oc/VEPy6BF7m4I/AAAAAAAADeg/BhmXQ0XWlbI/s1600/bg-display-img.png' width='670'/>
+<div id='slider-control' style='opacity: 1;'>
+<img alt='' height='32' id='prev' src='http://3.bp.blogspot.com/-CTHTmHcF6Xw/VEPy6WTqVuI/AAAAAAAADeY/sGj1ovkD6cI/s1600/slider-prev.png' width='32'/>
+<img alt='' height='32' id='next' src='http://3.bp.blogspot.com/-Ij1dHlKIzmc/VEPy6PYf1KI/AAAAAAAADeU/dVZZmVUhrTM/s1600/slider-next.png' width='32'/></div></div>
+</div>
 
             <!--About Sections-->
             <section id="feature" class="feature p-top-100">
