--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@ end nav style */
                             </div>
                         </div>
                     </div>
+			<section id="hello" class="home bg-mega">
 			
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
