--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ end nav style */
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="..." alt="First slide">
+      <img class="d-block w-100" src="https://4.bp.blogspot.com/-Jjn3HtSF4Oc/VEPy6BF7m4I/AAAAAAAADeg/BhmXQ0XWlbI/s1600/bg-display-img.png" alt="First slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="..." alt="Second slide">
