--- a/index.html
+++ b/index.html
@@ -653,9 +653,14 @@ end nav style */
 
             <section id="company" class="company bg-light">
                 <div class="container">
-			  <h2 style="text-align: left;">Be apart of us!<h2>
-				    <h2><a href="#" style="text-align: right;">Learn More..</a></h2>
-                    <div class="row">
+			 <div align="left" style="border:1px solid red">
+Be apart of us!
+</div>
+			<div align="right" style="border:1px solid red">
+Learn More..
+</div>
+
+
 			  
 			    <!--
                         <div class="main_company roomy-100 text-center">
