--- a/index.html
+++ b/index.html
@@ -653,11 +653,11 @@ end nav style */
 
             <section id="company" class="company bg-light">
                 <div class="container">
-			 <div align="left" style="border:1px solid red">
+			 <div align="left" style="">
 Be apart of us!
 </div>
-			<div align="right" style="border:1px solid red">
-Learn More..
+			<div align="right" style="">
+<a href="#">Learn More..</a>
 </div>
 
 
