--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
 
     <body data-spy="scroll" data-target=".navbar-collapse">
 <style>
+/* be apart of us */
+.alignleft {
+	float: left;
+}
+.alignright {
+	float: right;
+}
 	
 /* Hover over Nav Menu */
 	
@@ -653,12 +660,9 @@ end nav style */
 
             <section id="company" class="company bg-light">
                 <div class="container">
-			 <div align="left" style="">
-Be apart of us!
-
-			<div align="right" style="">
-<a href="#">Learn More..</a>
-</div>
+			 <div id="textbox">
+  <p class="alignleft">Be apart of us!</p>
+  <p class="alignright"><a href="#">Learn More..</a></p>
 </div>
 
 
