--- a/index.html
+++ b/index.html
@@ -661,8 +661,10 @@ end nav style */
             <section id="company" class="company bg-light">
                 <div class="container">
 			 <div id="textbox">
-  <p class="alignleft">Be apart of us!</p>
-  <p class="alignright"><a href="#">Learn More..</a></p>
+  <H2 class="alignleft">Be apart of us!</H2>
+  <p class="alignright"> <div class="form-group">
+                                                <a href="" class="btn btn-default">LEARN MORE.. <i class="fa fa-long-arrow-right"></i></a>
+                                            </div></p>
 </div>
 
 
