--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 }
 .alignright {
 	float: right;
+	padding: 20px
+		border: 3px ;
+	border-radius: 3px;
+	
 }
 	
 /* Hover over Nav Menu */
@@ -662,9 +666,9 @@ end nav style */
                 <div class="container">
 			 <div id="textbox">
   <H2 class="alignleft">Be apart of us!</H2>
-  <p class="alignright"> <div class="form-group">
-                                                <a href="" class="btn btn-default">LEARN MORE.. <i class="fa fa-long-arrow-right"></i></a>
-                                            </div></p>
+  <p class="alignright"> 
+                                                <a href="">LEARN MORE.. </a>
+                                         </p>
 </div>
 
 
