--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
 }
 .alignright {
 	float: right;
-	padding: 20px
-		border: 3px ;
+	border: 3px ;
 	border-radius: 3px;
 	
 }
@@ -665,10 +664,10 @@ end nav style */
             <section id="company" class="company bg-light">
                 <div class="container">
 			 <div id="textbox">
-  <H2 class="alignleft">Be apart of us!</H2>
-  <p class="alignright"> 
-                                                <a href="">LEARN MORE.. </a>
-                                         </p>
+  <h2 class="alignleft">Be apart of us!</h2>
+  <h2 class="alignright"> 
+<a href="">LEARN MORE.. </a>
+ </h2>
 </div>
 
 
