--- a/index.html
+++ b/index.html
@@ -617,31 +617,13 @@ end nav style */
                             <div class="col-md-6 sm-m-top-30">
                                 <form class="" action="subcribe.php">
                                     <div class="row">
-                                        <div class="col-sm-6">
-                                            <div class="form-group"> 
-                                                <label>Your Name *</label>
-                                                <input id="first_name" name="name" type="text" class="form-control" required="">
-                                            </div>
-                                        </div>
-
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <label>Your Email *</label>
-                                                <input id="email" name="email" type="text" class="form-control">
-                                            </div>
-                                        </div>
-
-                                        <div class="col-sm-12">
-                                            <div class="form-group"> 
-                                                <label>Your Message *</label>
-                                                <textarea class="form-control" rows="6"></textarea>
-                                            </div>
+                                        <h2>BE APART OF US!</h2>
                                             <div class="form-group">
                                                 <a href="" class="btn btn-default">SEND MESSAGE <i class="fa fa-long-arrow-right"></i></a>
                                             </div>
                                         </div>
     
-                                    </div>
+                               
 
                                 </form>
                             </div>
