--- a/index.html
+++ b/index.html
@@ -604,9 +604,9 @@ end nav style */
                         </div>
                     </div><!-- End off row -->
                 </div><!-- End off container -->
-            </section> <!--End off Testimonial section -->
+            </section> <hr><!--End off Testimonial section -->
 
-          
+         
 
             <!--Contact Us Section-->
             <section id="contact" class="contact fix">
