--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@ end nav style */
                             <div class="col-md-6 sm-m-top-30">
                                 <form class="" action="subcribe.php">
                                     <div class="row">
-                                        <h2>BE APART OF US!</h2>
+                                        <h2>BE APART OF US!</h2><br/><br/>
                                             <div class="form-group">
                                                 <a href="" class="btn btn-default">SEND MESSAGE <i class="fa fa-long-arrow-right"></i></a>
                                             </div>
